media/main.css
.main {
    display: flex;
    align-items: center;
    justify-content: center;
}

body {
    margin: 0 auto;
    padding: 3%;
}

.main div {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100px;
    height: 100px;
}

button {
    border: none;
    padding: 10px;
    border-radius: 2px;
    cursor: pointer;
}

.btn-primary {
    background-color: #2d6198;
    color: #fff;
}

.btn-secondary {
    background-color: #3A3D41;
    color: #F8F8F8;
}


.card {
    border: 1px solid #373737;
    border-radius: 3px;
    margin: 10px 0;
}

.card-header {
    font-size: 18px;
    font-weight: bold;
    color: #D4D4D4;
    border-bottom: 1px solid #373737;
    padding: 10px; /* Add padding to the card-header */
    background-color: #373737;
}

.card-body {
    font-size: 16px;
    padding: 10px; 
}

.card-footer {
    font-size: 14px;
    padding: 10px; /* Move padding from card to card-footer */
}

.severity{
    padding: 3px 10px;
    border-radius: 5px;
}

.HI {
    background: #c30000;
    color: #fff;

}
.ME {
    background: #d47500;
    color: #fff;
}

.LO {
    background: #fff700;
    color: #333;
}

.fix_explanation {
    font-size: medium;
}
hr {
    border: 0;
    height: 1px;
    background: #373737;
    margin: 10px 0;
}

